static/css/s2.css
/* ... */
.readerTextTableOfContents .versionEditForm #priority {
  width: 25px;
}
.readerTextTableOfContents .versionEditForm #digitzedBySefaria {
  margin-right: 10px;
}
.readerTextTableOfContents .versionEditForm #save_button,
.readerTextTableOfContents .versionEditForm #delete_button {
  text-align: center;
  cursor: pointer;
  color: white;
  background: #212E50;
  padding: 4px 10px;
  border-radius: 3px;
  margin: 10px auto 0;
  width: 60px;
}
.readerTextTableOfContents .versionEditForm #delete_button {
  float: right;
  background: white;
  color: #999;
  border: 1px solid #999;
  width: 100px;
  margin: 0;
}
.readerTextTableOfContents .versionTitle .fa,
.readerTextTableOfContents .versionEditForm .fa {
  font-size: 10px;
  color: #666;
  vertical-align: super;
  margin-left: 3px;
  cursor: pointer;
}
.interface-hebrew .readerTextTableOfContents .versionTitle .fa,
.interface-hebrew .readerTextTableOfContents .versionEditForm .fa {
  margin: 0 3px 0 0 ;
}
.readerTextTableOfContents .versionTitle .error {
  color: red;
}
.readerTextTableOfContents .content {
  padding: 30px 10px 10px;
  box-sizing: border-box;
  text-align: center;
  height: 100%;
}
.readerTextTableOfContents .content .sheetTags {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding-top: 30px;
  border-top: 1px solid #ccc;
}
.readerTextTableOfContents .content .sectionLink {
  display: inline-block;
  height: 38px;
  min-width: 38px;
  line-height: 38px;
  vertical-align: middle;
  font-size: 13px;
  font-weight: lighter;
  margin: 1px;
  text-align: center;
  background-color: white;
  color: #666;
  cursor: pointer;
  padding: 0 6px;
  box-sizing: border-box;
}
.readerTextTableOfContents .content .sectionLink .en {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerTextTableOfContents .content .sectionLink  .he {
  font-family: "Heebo", sans-serif;
}
.interface-hebrew .readerTextTableOfContents .content .structToggles{
  direction: rtl;
}
.interface-english .readerTextTableOfContents .content .structToggles{
  direction: ltr;
}
.readerTextTableOfContents .content .structToggles {
  margin-bottom: 40px;
  display: table;
  table-layout: fixed;
  width: 100%;
}
.readerTextTableOfContents .content .structTogglesInner {
  display: table-row;
}
.readerTextTableOfContents .content .structTogglesInner + .structTogglesInner > .altStructToggleBox {
  padding-top: 6px;
}
.readerTextTableOfContents .content .structToggles .en {
  font-family: "Roboto", "Helvetica Neue", "Helvetica", sans-serif;
}
.readerTextTableOfContents .content .structToggles .he {
  font-family: "Heebo", sans-serif;
}
.readerTextTableOfContents .structToggles .altStructToggleBox {
  display: table-cell;
  height: 37px;
}
.altStructToggleBox a, .altStructToggleBox a:hover, .altStructToggleBox a:visited, .altStructToggleBox a:link, .altStructToggleBox a:active {
  text-decoration: none;
}

.readerTextTableOfContents .structToggles .altStructToggle {
  display: block;
  padding: 8px;
  color: #999;
  cursor: pointer;
  font-size: 13px;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 1px;
  border-bottom: 1px solid #CCC;
}
.readerTextTableOfContents .structToggles .altStructToggle.active {
  color: black;
  border-bottom: 4px solid #CCC;
}
.readerTextTableOfContents .structToggles .toggleDivider {
  color: #ccc;
  margin: 0 8px;
}
.readerTextTableOfContents .content .sectionName {
  display: none;
}
.readerTextTableOfContents .content .tocSection > .sectionName {
  font-size: 12px;
  margin: 0 3px 4px;
  color: #666;
  display: block;
}
.readerTextTableOfContents .content .tocContent {
  padding: 30px 0 40px;
  text-align: left;
}
.readerTextTableOfContents.narrowPanel .tocContent {
  padding: 0 0 40px;
}
.readerTextTableOfContents .content .tocSection {
  margin-bottom: 22px;
  display: block;
  text-align: left;
}
.readerTextTableOfContents .content .tocSection.noSubLevels{
  display: none;
}
.readerTextTableOfContents .content .schema-node-contents {
  margin: 0 auto 22px;
  display: block;
  width: 100%;
}
.readerTextTableOfContents .content .schema-node-title {
  color: black;
  font-size: 16px;
  display: inline-block;
  margin-bottom: 10px;
  cursor: pointer;
}
.readerTextTableOfContents .content .schema-node-title .he {
  font-family: "Heebo", sans-serif;
}
.readerTextTableOfContents .content .schema-node-toc {
  display: block;
}
.readerTextTableOfContents .content .schema-node-toc:not(.linked) .schema-node-title:after {
  content: "\f105";
  display: inline-block;
  font: normal normal normal 14px/1 FontAwesome;
  font-size: 14px;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: FontAwesome;
}
.readerPanel.hebrew .readerTextTableOfContents .content .schema-node-toc:not(.linked) .schema-node-title:after {
  content: "\f104";
}
.readerTextTableOfContents .content .schema-node-toc:not(.linked) .schema-node-title.open:after {
  content: "\f107";
}
.readerTextTableOfContents .content .schema-node-contents.closed {
  display: none;
}
.readerTextTableOfContents .content .schema-node-toc .schema-node-contents.closed {
  display: block;
}
.readerTextTableOfContents .content .schema-node-control {
  margin: 0 4px;
}
.readerTextTableOfContents .content .tocLevel {
  display: block;
  margin: 0 auto;
}
.readerTextTableOfContents .content .tocContent > .tocLevel > .schema-node-toc {
  margin: 10px 0;
}
.readerTextTableOfContents .schema-node-toc {
  margin: 6px 20px;
}
.readerTextTableOfContents .content .schema-node-toc.linked:hover .schema-node-title {
  text-decoration: underline;
}
.readerTextTableOfContents .altStruct .refLink {
  width: 49%;
  margin: 3px;
  box-sizing: border-box;
  display: inline-block;
}
@media (max-width: 450px) {
  .readerTextTableOfContents .altStruct .refLink {
    margin: 0.5%;
  }
}
/* ... */

